--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="styling.css">
+</head>
+<body>
+
 <h1>Nat Wollny</h1>
 <h2>This is mz personal website</h2>
 
 <p class="fontred">This is relly cool and I whatever</p>
 
 <p class="italics">Bio</p>
+
+</body>
+</html>
