--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p class="fontred">This is relly cool and I whatever</p>
 
 <p class="italics">Bio</p>
+<img src="./NatWollny.jpg" alt="Profile pic" width="500" height="600">
 
 </body>
 </html>
