--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <link rel="stylesheet" href="styling.css">
 </head>
 <body>
+	<div class="container">
+		<h1>Nat Wollny</h1>
+		<h2>This is mz personal website</h2>
 
-<h1>Nat Wollny</h1>
-<h2>This is mz personal website</h2>
+		<p class="fontred">This is relly cool and I whatever</p>
 
-<p class="fontred">This is relly cool and I whatever</p>
+		<p class="italics">Bio</p>
+		<img src="./NatWollny.jpg" alt="Profile pic" width="500" height="600">	
+	</div>
 
-<p class="italics">Bio</p>
-<img src="./NatWollny.jpg" alt="Profile pic" width="500" height="600">
 
 </body>
 </html>
